src/snapshots/mosh__parser__tests__msh4__msh4_ascii_header.snap
---
source: src/parser.rs
expression: parse_header(&first_four_lines(path).unwrap()).unwrap()
---
(
    "\r\n$EndMeshFormat\r\n$Entities\r\n",
    MshHeader {
        version: V41,
        storage: Ascii,
        size_t: EightBytes,
    },
)
